--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "babel server -d dist --ignore server/tests --copy-files && rollup -c",
+    "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start:dev": "sirv public --single --dev",
-    "start": "node ./dist/server.js"
+    "start": "sirv public -s"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/node": "^7.13.13",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-image": "^2.0.6",
     "@rollup/plugin-node-resolve": "^11.0.0",
@@ -23,11 +20,12 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "sirv-cli": "^1.0.0",
+    "svelte-routing": "^1.5.0",
     "tone": "^14.7.77"
   }
 }
