--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public -s --port 3000"
+    "start": "sirv public -s",
+    "heroku-postbuild": "rollup -c"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
