--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public -s",
-    "heroku-postbuild": "rollup -c"
+    "start": "sirv public --host $HOST --port $PORT",
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
