--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --host $HOST --port $PORT",
+    "start": "sirv public --host $HOST --port $PORT -s",
     "start:dev": "sirv public --dev -s"
   },
   "devDependencies": {
